[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sounds/menu_music.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Code/AudioManager.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/ATTACK4.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/miss.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/ATTACK3.wav" type="AudioStream" id=5]

[node name="AudioManager" type="Node2D"]
script = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="Enemy_CircleShot" type="AudioStreamPlayer" parent="." groups=["SFX"]]
stream = ExtResource( 3 )

[node name="Player_Shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -41.038
pitch_scale = 1.19

[node name="Player_Bomb" type="AudioStreamPlayer" parent="." groups=["SFX"]]
stream = ExtResource( 3 )
pitch_scale = 0.29

[node name="Player_Death" type="AudioStreamPlayer" parent="." groups=["SFX"]]
stream = ExtResource( 4 )

[node name="Enemy_NormalShot" type="AudioStreamPlayer" parent="." groups=["SFX"]]
stream = ExtResource( 3 )
